Final preparations for deployment

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 mongo_url=mongodb+srv://zerodha:zerodha@zerodhaclonecluster.ejhi9m9.mongodb.net/zerodha?retryWrites=true&w=majority&appName=ZerodhaCloneCluster
 JWT_SECRET=zerodha
+SESSION_SECRET=your-strong-random-secret
