--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,8 @@
+# backend/.env
+
+FRONTEND_URL=http://localhost:5173
+DASHBOARD_URL=http://localhost:5174
+
 mongo_url=mongodb+srv://zerodha:zerodha@zerodhaclonecluster.ejhi9m9.mongodb.net/zerodha?retryWrites=true&w=majority&appName=ZerodhaCloneCluster
-JWT_SECRET=zerodha
-SESSION_SECRET=your-strong-random-secret
+SESSION_SECRET=a-local-secret-key-that-does-not-matter-much
+NODE_ENV=development
